[package]
name = "uref_share"
version = "0.1.0"
edition = "2018"

[dependencies]
contract = { package = "casper-contract" }
types = { package = "casper-types"}

[[bin]]
name = "uref-share"
path = "src/share.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "locked"
path = "src/locked.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "locked_with_share"
path = "src/locked_with_share.rs"
bench = false
doctest = false
test = false


[features]
default = ["contract/std", "types/std"]
